cp: 	PR c++/17681 	* error.c (dump_type): Change TREE_VEC case into TREE_BINFO. testsuite: 	PR c++/17681 	* g++.dg/other/error9.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@88170 138bc75d-0d04-0410-961f-82ee72b054a4